--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "@angular/compiler": "~8.2.12",
     "@angular/core": "~8.2.12",
     "@angular/forms": "~8.2.12",
+    "@angular/http": "^7.2.16",
     "@angular/platform-browser": "~8.2.12",
     "@angular/platform-browser-dynamic": "~8.2.12",
     "@angular/router": "~8.2.12",
-    "rxjs": "~6.4.0",
+    "rxjs": "^6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
